# LoLAutomation

./: .gitignore  README.md  api.py  app_meta.py  conftest.py  desktop_app.py  lcu.py  main.py  pyproject.toml  readme.txt  requirements-dev.txt  requirements.txt  run_app.py  run_app.spec  rune_presets_dialog.py  runes.json  runes_dialog.py  skins_dialog.py  updater.py  webscrapping.py
.github/workflows/: ci.yml
assets/: README.md
runepilot/: __init__.py
runepilot/domain/: __init__.py  champions.py
runepilot/infrastructure/: __init__.py  champion_repo.py  lcu_client.py  resource_paths.py
tests/: test_infrastructure.py  test_picks.py  test_runes.py  test_spells_champions.py  test_updater.py
tools/: generate_app_icon.py
